<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/linear_layout_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_signup"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_signup2"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/name"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signup"
            android:textSize="20sp"
            android:backgroundTint="@color/orange"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tv_login_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_login"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorLink="@color/orange"
            android:textSize="14sp"
            android:layout_marginTop="3dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
