<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <!-- SCROLLABLE CONTENT -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Bagian atas: Icon user, username, logout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">

                <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_user"
                    android:contentDescription="@string/user_icon"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Triska"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/btn_logout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/logout"
                    android:contentDescription="@string/user_icon"
                    android:layout_marginStart="170dp"/>
            </LinearLayout>

            <!-- Sapaan -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hi2"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"/>

            <!-- Search Bar -->
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/search_view_bg"
                android:iconifiedByDefault="false"
                android:queryHint="Search for recipes..."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Judul bagian -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipes_for_you"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"/>

            <!-- Recycler View -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipes_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/empty_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recommendations are not yet available for new users. We will update the data soon."
                android:clipToPadding="false"
                android:paddingBottom="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipes_top5_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- FLOATING ACTION BUTTON -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_heart_filled"
        android:contentDescription="@string/favorite_recipes"
        android:backgroundTint="@color/orange"
        app:tint="@android:color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
